--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: ^2.0.2
+  pdf: ^3.10.8
+  http: ^1.2.1
+  url_launcher: ^6.2.5
+  path_provider: ^2.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -66,6 +69,11 @@ flutter:
     - assets/image1.jpg
     - assets/gpay.jpg
     - assets/gp.jpg
+    - assets/flogo.jpg
+    - assets/fimage.webp
+    - assets/fisate.jpg
+    - assets/fisat1.jpg
+    - assets/fisat3.webp
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
